--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Guild 25 - Kudos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,9 +17,7 @@
                 <input type="text" placeholder="Search by name" disabled>
             </div>
             <nav class="tabs">
-                <button class="tab active">All kudos</button>
-                <button class="tab">Recent</button>
-                <button class="tab badge" data-count="5">New</button>
+                <button class="tab active">All chats</button>
             </nav>
             <ul class="chat-list" id="chatList">
                 <!-- Chat items will be here -->
@@ -31,6 +32,9 @@
                 </div>
                 <h2 class="chat-name" id="chatName">Select a person</h2>
             </header>
+            <div class="notification-banner" id="notificationBanner" style="display: none;">
+                <span>Frontend Guild 2025 Kudos Collection</span>
+            </div>
             <div class="messages" id="messages">
                 <!-- Messages will be rendered here -->
             </div>
