chore: some styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Sidebar with chat list -->
         <aside class="sidebar">
             <div class="search-box">
-                <input type="text" placeholder="Search by name" disabled>
+                <input type="text" placeholder="Search by name" id="searchInput">
             </div>
             <nav class="tabs">
                 <button class="tab active">All chats</button>
