chore: ref styles

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 </div>
                 <h2 class="chat-name" id="chatName">Select a person</h2>
             </header>
-            <div class="notification-banner" id="notificationBanner" style="display: none;">
-                <span>Frontend Guild 2025 Kudos Collection</span>
+            <div class="notification-banner hidden" id="notificationBanner">
+                <p class="notification-banner-text">Frontend Guild 2025 Kudos Collection</p>
             </div>
             <div class="messages" id="messages">
                 <!-- Messages will be rendered here -->
