--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Frontend Guild 25 - Kudos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +14,7 @@
         <!-- Sidebar with chat list -->
         <aside class="sidebar">
             <div class="search-box">
+                <label for="searchInput" class="sr-only">Search by name</label>
                 <input type="text" placeholder="Search by name" id="searchInput">
             </div>
             <nav class="tabs">
